Refactor global shortcuts documentation
Removed sections on usage scenarios and tips for muscle memory and context-aware shortcuts. Streamlined the content to focus on core shortcuts and their functionality.

--- a/content/features/globalShortcuts.mdx
+++ b/content/features/globalShortcuts.mdx
@@ -2,14 +2,6 @@
 
 System-wide keyboard shortcuts for instant access to SupaSidebar from any application - no mouse required.
 
-## When to Use
-
-- **Keyboard-first workflows**: Maximum productivity without touching the mouse
-- **Quick access**: Toggle sidebar and features without breaking focus or flow
-- **Muscle memory**: Build fast navigation habits for professional power-user environments
-- **Accessibility**: Full keyboard operation for users with motor disabilities or efficiency preferences
-- **Context switching**: Work seamlessly across different apps with global shortcuts
-
 ## How It Works
 
 <p>
@@ -22,17 +14,14 @@ System-wide keyboard shortcuts for instant access to SupaSidebar from any applic
 
 Global shortcuts work from anywhere on your Mac - whether you're in a browser, text editor, terminal, or design tool. Press the shortcut combination and SupaSidebar responds immediately.
 
-### Always Available
-
-Unlike application-specific shortcuts, global shortcuts are **always active**:
-- Works in every application
-- No need to switch to SupaSidebar first
-- Instant response times
-- System-level keyboard capture
 
 ## All Global Shortcuts
 
-### Core Shortcuts
+### Core Shortcuts  :
+<br />
+<p align="center">
+  <img src="/Global Shortcuts.jpeg" alt="Global shortcut" width="800" />
+</p>
 
 | Shortcut | Action | Description |
 |----------|--------|-------------|
@@ -64,6 +53,14 @@ Unlike application-specific shortcuts, global shortcuts are **always active**:
 
 *Space shortcuts can be disabled in Preferences → Spaces*
 
+
+
+### Emergency Quit
+
+**⌘Q** (when sidebar is focused) → Quit SupaSidebar
+Always available if shortcuts stop responding.
+
+
 ### Pinned Items
 
 | Shortcut | Action | Description |
@@ -79,10 +76,6 @@ Unlike application-specific shortcuts, global shortcuts are **always active**:
 | *Not set* | None | Create New Link (Global) |
 
 *Configure in Preferences → Shortcuts*
-<br />
-<p align="center">
-  <img src="Global Shortcuts.jpeg" alt="Global shortcut" width="800" />
-</p>
 
 ## Customizing Shortcuts
 
@@ -168,27 +161,6 @@ All without touching mouse.
   </a>
 </p>
 
-### Quick Access Workflow
-
-1. **⌘⌥1** - Open most-used site/app
-2. Work for a while
-3. **⌘⌥2** - Switch to second pinned item
-4. **⌘⌃K** - Search for specific link
-5. **⌘⌃←** - Switch to different space
-
-Everything accessible via keyboard.
-
-### File Management Workflow
-
-1. Open Finder
-2. Navigate to folder
-3. Select files
-4. **⌘⌃S** - Add to sidebar
-5. **⌘⇧Space** - Hide sidebar
-6. Continue working
-7. **⌘⌃K** - Later, search for added files
-
-No drag-and-drop required.
 
 ## Modifier Key Reference
 
@@ -205,54 +177,6 @@ Understanding modifier keys for shortcuts:
 | **⎋** | Escape | Escape key |
 | **⌫** | Delete | Delete/Backspace |
 
-## Tips & Tricks
-
-### Muscle Memory Building
-
-Practice the top 5 shortcuts daily:
-1. **⌘⇧Space** - Toggle sidebar
-2. **⌘⌃K** - Command panel
-3. **⌘⌃S** - Smart save
-4. **⌘⌥1** - First pinned item
-5. **⌘⌃←/→** - Space navigation
-
-Within a week, they'll be automatic.
-
-### Context-Aware Shortcuts
-
-**⌘⌃S** and **⌘⌃C** intelligently adapt based on your active app:
-- **Browser** → Save/copy page URL
-- **Finder** → Add/copy file paths
-- **Other apps** → Default to browser behavior
-
-One shortcut, multiple uses. See [Smart Shortcuts](smartShortcuts) for complete details.
-
-### Shortcut Chaining
-
-Combine shortcuts for powerful workflows:
-- **⌘⌃1** (switch to Work space) → **⌘⌥1** (open work email)
-- **⌘⌃K** (command panel) → **⌘V** (paste and create link)
-- **⌘⇧Space** (show sidebar) → **⌘N** (create new link)
-
-### Disable for Focus
-
-During deep focus work, disable optional shortcuts:
-- Preferences → Spaces → Uncheck space navigation
-- Preferences → General → Uncheck pinned item shortcuts
-
-Keep only essential shortcuts active.
-
-### Two-Hand Shortcuts
-
-Most shortcuts use left-hand modifiers (⌘⌃⌥) + right-hand keys:
-- Left hand: Hold ⌘⌃
-- Right hand: Press K
-- Ergonomic and fast
-
-### Emergency Quit
-
-**⌘Q** (when sidebar is focused) → Quit SupaSidebar
-Always available if shortcuts stop responding.
 
 ## Troubleshooting
 
