--- a/content/features/pinnedItems.mdx
+++ b/content/features/pinnedItems.mdx
@@ -2,17 +2,13 @@
 
 Lightning-fast access to your most important links with single-keystroke shortcuts - perfect for websites, apps, and files you use every day.
 
-## When to Use
-
-- Instant access to daily-use tools (email, calendar, project management)
-- One-key shortcuts for frequently opened applications
-- Quick launch for commonly referenced documentation
-- Speed up repetitive workflows with keyboard-only access
-- Prioritize your most critical resources above everything else
 
 ## How It Works
 
-[PLACEHOLDER: Screenshot showing pinned items section at top of sidebar with numbered badges]
+<br />
+<p align="center">
+  <img src="/Pinned Links.jpeg" alt="Pinned Links" width="800" />
+</p>
 
 Pinned items appear at the very top of your sidebar, marked with a pin icon. Assign keyboard shortcuts (⌘⌥1 through ⌘⌥9) to open your first 9 pinned items instantly from anywhere on your Mac.
 
@@ -21,10 +17,6 @@ Pinned items appear at the very top of your sidebar, marked with a pin icon. Ass
 Press **⌘⌥1** → Opens your first pinned item
 Press **⌘⌥2** → Opens your second pinned item
 ...and so on up to **⌘⌥9**
-
-No searching, no clicking, no context switching - just instant access.
-
-[PLACEHOLDER: Video showing user pressing ⌘⌥1 and browser opening to pinned website]
 
 ## Setup
 
@@ -40,8 +32,6 @@ No searching, no clicking, no context switching - just instant access.
 2. Press **⌘P**
 3. Item is pinned
 
-[PLACEHOLDER: Screenshot showing right-click context menu with "Pin to Top" option]
-
 ### Reordering Pins
 
 Drag pinned items up or down to change their keyboard shortcut assignments:
@@ -49,8 +39,6 @@ Drag pinned items up or down to change their keyboard shortcut assignments:
 - Second pin → **⌘⌥2**
 - Third pin → **⌘⌥3**
 - ...and so on
-
-[PLACEHOLDER: Video showing user dragging pinned items to reorder them]
 
 ### Enabling Keyboard Shortcuts
 
@@ -61,9 +49,6 @@ Keyboard shortcuts for pinned items are optional:
 3. Press **⌘⌥1-9** to open pins 1-9
 
 Disable if you need these shortcuts for other applications.
-
-[PLACEHOLDER: Screenshot of preferences with pinned item shortcuts toggle]
-
 ## Using Pinned Items
 
 ### Opening Pins
@@ -87,45 +72,6 @@ Disable if you need these shortcuts for other applications.
 
 Item returns to its original location in your folders.
 
-### Pins Across Spaces
-
-Pinned items are **global** - they appear in all [Spaces](spaces). This makes sense for items you need regardless of context (email, calendar, notes).
-
-For space-specific quick access, use folder organization instead.
-
-[PLACEHOLDER: Screenshot showing same pinned items visible in different spaces]
-
-## Example Pin Configurations
-
-### Developer Setup
-1. **⌘⌥1**: GitHub
-2. **⌘⌥2**: VS Code (local app)
-3. **⌘⌥3**: Documentation site
-4. **⌘⌥4**: Localhost:3000
-5. **⌘⌥5**: API reference
-
-### Knowledge Worker
-1. **⌘⌥1**: Gmail
-2. **⌘⌥2**: Calendar
-3. **⌘⌥3**: Notion
-4. **⌘⌥4**: Slack
-5. **⌘⌥5**: Project management tool
-
-### Student
-1. **⌘⌥1**: Learning management system
-2. **⌘⌥2**: Email
-3. **⌘⌥3**: Google Drive
-4. **⌘⌥4**: Research database
-5. **⌘⌥5**: Note-taking app
-
-### Content Creator
-1. **⌘⌥1**: YouTube Studio
-2. **⌘⌥2**: Analytics dashboard
-3. **⌘⌥3**: Assets folder
-4. **⌘⌥4**: Editing software
-5. **⌘⌥5**: Stock media sites
-
-[PLACEHOLDER: Screenshot showing example pinned item configuration]
 
 ## Keyboard Shortcuts
 
@@ -134,43 +80,6 @@ For space-specific quick access, use folder organization instead.
 | **⌘⌥1** - **⌘⌥9** | Open pinned item 1-9 |
 | **⌘P** | Pin/unpin selected item (in sidebar) |
 
-## Tips & Tricks
-
-### Muscle Memory Optimization
-Arrange your most-used items in positions 1-3 for fastest access. Reserve positions 4-9 for less frequent but still important items.
-
-### Visual Feedback
-When you trigger a pinned item shortcut, SupaSidebar shows a notification with the item name - helpful when building muscle memory.
-
-### Browser-Specific Pins
-Pin the same website multiple times with different browser assignments:
-- Pin 1: Gmail in Chrome
-- Pin 2: Gmail in Safari
-Each opens the same site in different browsers.
-
-### Local File Quick Access
-Pin frequently accessed folders:
-- Documents folder
-- Downloads folder
-- Project directory
-Press the shortcut to open in Finder instantly.
-
-### App Launchers
-Pin applications for keyboard-driven app launching:
-- Add app to sidebar (drag from Applications folder)
-- Pin it
-- Launch with ⌘⌥[number]
-
-### Pin Limit
-While the sidebar can display unlimited pinned items, only the first 9 get keyboard shortcuts. Keep your pin count reasonable for best usability.
-
-### Workflow Chains
-Combine pinned items with [Spaces](spaces):
-- Switch to "Work" space: **⌘⌃1**
-- Open work email: **⌘⌥1**
-- Open project board: **⌘⌥2**
-
-Two keystrokes and you're ready to work.
 
 ## Troubleshooting
 
