--- a/content/features/sidebar.mdx
+++ b/content/features/sidebar.mdx
@@ -2,18 +2,11 @@
 
 A lightweight, always-accessible floating panel that gives you instant access to all your links, files, and folders from anywhere on your Mac.
 
-## When to Use
-
-- Quickly access frequently used websites, apps, and files without cluttering your desktop
-- Keep your workflow organized with a persistent sidebar that follows you across applications
-- Switch between different tools and resources without leaving your current task
-- Maintain focus by reducing the need to search through Finder or browser tabs
-
 ## How It Works
 
 <br />
 <p align="center">
-  <img src="/assets/default position of sidebar.jpeg" alt="Default position of sidebar" width="800" />
+  <img src="/default position of sidebar.jpeg" alt="Default position of sidebar" width="800" />
 </p>
 
 The Sidebar Panel is a floating window that sits on the edge of your screen, ready to appear with a single keystroke. It organizes all your saved content in an easy-to-navigate interface with folders, search, and quick actions.
@@ -60,7 +53,7 @@ The sidebar works out of the box with default settings. To customize:
    - **Sidebar side**: Choose left or right side (or use ⌘⌃L shortcut)
 <br />
 <p align="center">
-  <img src="/assets/default sidebar position.jpeg" alt="default sidebar position.jpeg" width="800" />
+  <img src="/default sidebar position.jpeg" alt="default sidebar position.jpeg" width="800" />
 </p>
 
 ## Keyboard Shortcuts
@@ -72,23 +65,6 @@ The sidebar works out of the box with default settings. To customize:
 | **⌘⌃L** | Toggle between left and right sides |
 | **⌘⌃P** | Pin/unpin sidebar to follow active space |
 | **Esc** | Hide sidebar (when focused) |
-
-## Tips & Tricks
-
-### Pin Across All Spaces
-By default, the sidebar stays on the current macOS space. Press **⌘⌃P** to make it follow you everywhere - perfect for quick-access workflows.
-
-### Multi-Monitor Setup
-The sidebar automatically positions itself on your active screen. When you move to a different display, press **⌘⇧Space** twice (hide then show) to reposition it to the new screen.
-
-### Reduce Distraction
-Enable **opacity on focus change** in preferences to make the sidebar semi-transparent when not in use, reducing visual clutter while keeping it accessible.
-
-### Quick Navigation Workflow
-1. Press **⌘⇧Space** to show sidebar
-2. Navigate with arrow keys or type to search
-3. Press **Return** to open item
-4. Sidebar auto-hides, keeping you in flow
 
 ## Related Features
 
