Update image source paths in SetUp.mdx

--- a/content/features/SetUp.mdx
+++ b/content/features/SetUp.mdx
@@ -11,7 +11,7 @@ Browser integration requires **Automation permissions**:
 
 <br />
 <p align="center">
-  <img src="/assets/automation real.jpeg" alt="Automation Permission" width="800" />
+  <img src="/automation real.jpeg" alt="Automation Permission" width="800" />
 </p>
 <br />
 
@@ -31,5 +31,5 @@ Some browsers benefit from Accessibility access for enhanced features:
 
 <br />
 <p align="center">
-  <img src="/assets/accessibility mouse triggers.jpeg" alt="Accessibility" width="800" />
+  <img src="/accessibility mouse triggers.jpeg" alt="Accessibility" width="800" />
 </p>
