--- a/content/features/browserIntegration.mdx
+++ b/content/features/browserIntegration.mdx
@@ -14,12 +14,13 @@ Press the same shortcuts in any browser or Finder - SupaSidebar automatically do
 
 <br />
 <p align="center">
-  <img src="/assets/smartcopy.jpeg" alt="Smart Copy example showing URL Copied" width="800" />
+  <img src="/smart copy.jpeg" alt="Smart Copy example showing URL Copied" width="800" />
 </p>
+
 
 <br />
 <p align="center">
-<img  src="/assets/smartsave.jpeg"  alt="Smart Save example showing Page Saved" width="600" />
+<img  src="/smart save.jpeg"  alt="Smart Save example showing Page Saved" width="800" />
 </p>
 
 **Works with:**
@@ -72,14 +73,7 @@ Control exactly which browser opens each link with flexible options:
 
 ### Setup (2 minutes)
 
- **Grant Automation Permissions:**
-   - System Settings → Privacy & Security → Automation
-   - Find SupaSidebar
-   - Enable checkboxes for browsers you use
-<br />
-<p align="center">
-  <img src="/assets/automation real.jpeg" alt="Automation Permissions" width="800" />
-</p>
+ ***refer to***  :  [Set Up](SetUp)
 
 ### Common Workflows
 
@@ -103,22 +97,6 @@ Control exactly which browser opens each link with flexible options:
 
 ## Browser Integration Features
 
-### Live Tabs
-
-Real-time browser tab tracking across all supported browsers:
-- See all open tabs in sidebar
-- Switch to any tab instantly
-- Close tabs from sidebar
-- Search tabs in Command Panel
-
-<br />
-<p align="center">
-  <img src="public/assets/lifetabsmultiplebrowser.jpeg" alt="livetabs" width="800" />
-</p>
-
-**Available for:** Safari, Chrome, Edge, Brave, Vivaldi, Comet, Orion, Atlas, Helium (9 browsers + more coming)
-
-**Learn more:** [Live Tabs →](liveTabs)
 
 ### Browser Window Adjustment
 
@@ -160,25 +138,7 @@ Work across multiple browsers simultaneously:
 See [Global Shortcuts](globalShortcuts) for complete reference.
 
 ## Permissions
-
-### Required: Automation
-
-Browser integration requires Automation permissions:
-
-**Setup:**
-1. System Settings → Privacy & Security → Automation
-2. Find SupaSidebar
-3. Enable checkboxes for all browsers you use
-
-**First Time:**
-macOS will prompt when you first use shortcuts - click OK to grant access.
-
-### Optional: Accessibility
-
-Some browsers benefit from Accessibility permissions:
-
-**System Settings → Privacy & Security → Accessibility** → Enable SupaSidebar
-
+***refer to***  :  [Set Up](SetUp)
 **Recommended for:**
 - Comet (Perplexity) - Enhanced URL extraction
 - Other browsers in edge cases
