--- a/content/features/spaces.mdx
+++ b/content/features/spaces.mdx
@@ -4,18 +4,11 @@ Organize your digital life into separate workspaces - one for work, one for pers
 
 **Note:** Spaces is a **Premium feature**. Free users can use 1 space. [Upgrade](https://supasidebar.com/pricing) for unlimited spaces.
 
-## When to Use
-
-- Separate work links from personal browsing
-- Organize different projects into dedicated workspaces
-- Keep client work isolated and confidential
-- Create context-specific environments (Research, Writing, Design, etc.)
-- Reduce cognitive load by showing only relevant links for your current task
 
 ## How It Works
 <br />
 <p align="center">
-  <img src="/assets/saved spaces.jpeg" alt="Saved Spaces" width="800" />
+  <img src="/saved spaces.jpeg" alt="saved spaces" width="800" />
 </p>
 
 Each Space is an independent workspace containing its own set of:
@@ -59,7 +52,7 @@ Choose which space opens when you launch SupaSidebar:
 
 <br />
 <p align="center">
-  <img src="/assets/automation.jpeg" alt="default set up and new space" width="800" />
+  <img src="/automation.jpeg" alt="default set up and new space" width="800" />
 </p>
 
 ## Using Spaces
@@ -90,7 +83,7 @@ Each space has its own:
 - **Pinned Items**: Quick-access favorites (shared across all spaces)
 <br />
 <p align="center">
-  <img src="/assets/space and folders.jpeg" alt="space and folders" width="800" />
+  <img src="/space and folders.jpeg" alt="space and folders" width="800" />
 </p>
 
 ## Advanced Features
@@ -116,8 +109,6 @@ This lets you jump directly to specific spaces without cycling.
    - Restores previously saved tabs for the new space
    - Optionally force-quits browsers between spaces for clean transitions
 
-[PLACEHOLDER: Screenshot showing tab management settings]
-
 ### Live Tabs Filtering
 
 When [Live Tabs](liveTabs) is enabled, you can filter tabs by space:
@@ -135,56 +126,3 @@ Example: In "Work" space, only see work-related tabs.
 | **⌘⌃←** | Previous space (cyclic) |
 | **⌘⌃→** | Next space (cyclic) |
 | **⌘⌃1** - **⌘⌃9** | Jump to space 1-9 (if enabled) |
-
-## Tips & Tricks
-
-### Context Switching Made Easy
-Create spaces for different work modes:
-- **Deep Work**: Development tools, documentation, no distractions
-- **Communication**: Email, Slack, project management
-- **Research**: Reading list, articles, learning resources
-
-Switch spaces to switch mental contexts.
-
-### Client-Based Organization
-Freelancers and consultants can create a space per client, keeping all client-specific resources isolated and organized.
-
-### Temporary Spaces
-Create a "Scratch" or "Temporary" space for short-term research or projects. Delete it when done to keep your sidebar clean.
-
-### Space Colors
-Assign colors to spaces for quick visual identification:
-- Red for urgent/work
-- Blue for personal
-- Green for learning
-
-### Shared vs. Space-Specific Content
-
-**Shared Across All Spaces:**
-- Pinned items (always accessible)
-- Global shortcuts
-
-**Space-Specific:**
-- Saved links and folders
-- Smart folders
-- Recent items (optional)
-- Live tabs (with filtering)
-
-## Free vs. Premium
-
-| Feature | Free | Premium |
-|---------|------|---------|
-| Number of spaces | 1 space | Unlimited |
-| Space switching | - | ✅ |
-| Tab management | - | ✅ (Beta) |
-| Space locking | - | ✅ |
-| Live tabs filtering | - | ✅ |
-
-[Upgrade to Premium](https://supasidebar.com/pricing) for unlimited spaces and advanced features.
-
-## Related Features
-
-- [Smart Folders](smartFolders) - Auto-organize within spaces
-- [Live Tabs](liveTabs) - Filter tabs by space
-- [Pinned Items](pinnedItems) - Quick access across all spaces
-- [Global Shortcuts](globalShortcuts) - Space navigation shortcuts
