--- a/content/features/Index.mdx
+++ b/content/features/Index.mdx
@@ -1,96 +1,130 @@
 # SupaSidebar – Feature Overview
 
-SupaSidebar brings everything you need closer—your apps, tabs, files, shortcuts, automations, and browsers—all in one unified, intelligent sidebar. Designed for speed, focus, and effortless multitasking, SupaSidebar adapts to your workflow and elevates how you navigate your Mac.
+SupaSidebar brings everything you need closer—your apps, tabs, files, shortcuts, automations, and browsers, all in one unified, intelligent sidebar. Designed for speed, focus, and effortless multitasking, SupaSidebar adapts to your workflow and elevates how you navigate your Mac.
 
----
 
 ## Key Features
 
-### Command Panel
-Access anything instantly.  
-The Command Panel offers fast, powerful search across apps, files, browser tabs, bookmarks, web queries, and commands—with fuzzy search built in. Trigger it globally and jump into tasks without breaking your flow.
+### Command Panel  :
+Access anything instantly. The Command Panel offers fast, powerful search across apps, files, browser tabs, bookmarks, web queries, and commands with fuzzy search built in. Trigger it globally and jump into tasks without breaking your flow.
 
----
+***refer to***  :  [Command Panel](commandPanel)
 
-### Global Shortcuts
+<br/>
+
+### Global Shortcuts  :
 Customize keyboard shortcuts for actions across SupaSidebar.  
 Launch apps, switch Spaces, open tabs, or trigger commands—all with a keystroke.
 
----
+***refer to***  :  [Global Shortcuts](globalShortcuts)
 
-### Browser Integration
+<br/>
+
+
+### Browser Integration  :
 A unified browsing experience across Safari, Chrome, Brave, Arc, and more.  
 Browse active tabs, revisit recent ones, set default browsers, and configure search engine preferences from a single interface.
 
----
+***refer to***  :  [Browser Integration](browserIntegration)
 
-### Browser Selection
+<br/>
+
+
+### Browser Selection  :
 Choose where each link opens by setting your preferred browser.  
 Enable or disable individual browsers and fine-tune link-opening behavior to match your workflow.
 
----
+***refer to***  :  [Browser Selection](browserSelection)
 
-### Floating Button
+<br/>
+
+
+### Floating Button  :
 A quick-access floating launcher for essential actions—open the Command Panel, switch Spaces, and access pinned items—always within reach.
 
----
+***refer to***  :  [Floating Button](floatinButton)
 
-### Live Tabs
+<br/>
+
+
+### Live Tabs  :
 View active tabs across all connected browsers in real time.  
 Search, filter, and switch instantly without juggling windows or tabs.
 
----
+***refer to***  :  [Live Tabs](lifeTabs)
 
-### Mouse Triggers
+<br/>
+
+
+### Mouse Triggers  :
 Trigger actions through intuitive mouse gestures.  
 Open the sidebar, launch the Command Panel, switch Spaces, or run shortcuts using customizable mouse actions.
 
----
+***refer to***  :  [Mouse Triggers](mouseTriggers)
 
-### Pinned Items
+<br/>
+
+
+### Pinned Items  :
 Pin your frequently used apps, files, folders, websites, and shortcuts.  
 Keep your most important items one click away.
 
----
+***refer to***  :  [Pinned Items](pinnedItems)
 
-### Recent Items
+<br/>
+
+
+### Recent Items  :
 Quickly return to recently opened files, folders, or links.  
 A streamlined view designed to help you resume work instantly.
 
----
+***refer to***  :  [Recent Items](recentItems)
 
-### Smart Shortcuts
+<br/>
+
+
+### Smart Shortcuts  :
 Create custom shortcuts that combine actions—open apps, run scripts, switch browsers, or launch websites.  
 Build workflows that match your unique setup.
 
----
+***refer to***  :  [Smart Shortcuts](smartShortcuts)
 
-### Smart Folders
+<br/>
+
+
+### Smart Folders  :
 Organize your sidebar with dynamic groups that update automatically.  
 Group apps, links, or files based on custom rules for a clean, adaptive layout.
 
----
+***refer to***  :  [Smart Floders](smartFloders)
 
-### Spaces
+<br/>
+
+
+### Spaces  :
 Create dedicated workspaces inside SupaSidebar.  
 Switch between Work, Study, Personal, Research, or Custom Spaces.  
 Rename Spaces, set defaults, and tailor each Space to your workflow.
 
----
+***refer to***  :  [Spaces](spaces)
 
-### Finder Integration
+<br/>
+
+
+### Finder Integration  :
 Access important folders, frequently used directories, and recent files directly from the sidebar for faster navigation across your Mac.
 
+***refer to***  :  [Finder Integration](finderIntegration)
+
+<br/>
 
 
-## Permissions
+
+### Permissions
 SupaSidebar works seamlessly with macOS, requesting only the permissions required for features like global shortcuts, mouse triggers, browser access, and live tabs.  
 Clear permission steps ensure a smooth onboarding experience.
 
+***refer to***  :  [Set Up](setUp)
+<br/>
 
-
-## Designed for Speed, Focus & Flexibility
-
-SupaSidebar blends effortlessly into your workflow with thoughtful interactions, smooth animations, and customizable layouts.  
-Whether you're browsing, coding, designing, researching, or multitasking—SupaSidebar becomes a natural extension of your Mac.
 
