--- a/content/features/browserSupport.mdx
+++ b/content/features/browserSupport.mdx
@@ -32,22 +32,8 @@ SupaSidebar provides two levels of browser integration:
 
 Browser integration requires **Automation permissions** and for Accessibility access for enhanced features:
 
-**refer to** [Set Up](SetUp)
+***refer to***  :  [Set Up](SetUp)
 
-**First Time Setup:**
-When you first use browser shortcuts, macOS will prompt for permission for each browser. Click **OK** to grant access.
-
-**Grant for All Browsers:**
-Even if you primarily use one browser, enabling all provides flexibility to switch browsers without setup later.
-
-To test if permissions are working:
-
-1. Open a browser (e.g., Safari)
-2. Navigate to any webpage
-3. Press **⌘⌃S** (Smart Save)
-4. Page should be added to sidebar with notification
-
-If nothing happens, check Automation permissions.
 
 Use different browsers for different tasks:
 
@@ -100,32 +86,6 @@ Firefox, Arc, Dia
 
 See [Live Tabs](liveTabs) for detailed documentation.
 
-## Performance & Reliability
-
-### Integration Speed
-
-**Fastest Integration:** Safari, Chrome, Edge, Brave, Vivaldi
-- Near-instant URL extraction
-- Reliable AppleScript APIs
-- Excellent performance
-
-**Fast Integration:** Orion, Comet, Atlas, Helium
-- Slight delays possible with Accessibility extraction
-- Generally excellent performance
-
-**Moderate Integration:** Firefox, Zen
-- System Events-based integration
-- Slightly slower but reliable
-
-### Reliability
-
-All 14 browsers have production-ready integration:
-- Extensive real-world testing
-- Robust error handling
-- Permission verification
-- Fallback mechanisms
-
-**Most Reliable:** Safari (native macOS integration)
 
 ## Troubleshooting
 
