--- a/content/features/SetUp.mdx
+++ b/content/features/SetUp.mdx
@@ -1,6 +1,9 @@
 
 # Setup
 
+
+Browser integration requires **Automation permissions** and for **Accessibility access** for enhanced features:
+
 ## Required Permissions
 
 Browser integration requires **Automation permissions**:
