--- a/content/browserIntegration.mdx
+++ b/content/browserIntegration.mdx
@@ -36,17 +36,7 @@ Real-time browser tab tracking and switching. See [Live Tabs documentation](LIVE
 
 ## Setup
 
-### Required Permissions
-
-Grant SupaSidebar permission to control browsers:
-
-1. Open **System Settings → Privacy & Security → Automation**
-2. Find **SupaSidebar** in the list
-3. Enable checkboxes for browsers you want to use
-
-For Live Tabs with certain browsers (Comet), you may also need:
-- **System Settings → Privacy & Security → Accessibility** → Enable SupaSidebar
-
+***To learn about Set Up***  :  [Set Up](SetUp)
 ## Learn More
 
 - [Live Tabs Documentation](LIVE_TABS.md) - Detailed guide on the Live Tabs feature
