--- a/content/features/SetUp.mdx
+++ b/content/features/SetUp.mdx
@@ -4,9 +4,7 @@
 
 Browser integration requires **Automation permissions** and for **Accessibility access** for enhanced features:
 
-## Required Permissions
-
-Browser integration requires **Automation permissions**:
+## **Automation permissions**:
 
 1. Go to **System Settings → Privacy & Security → Automation**
 2. Find **SupaSidebar** in the list
@@ -26,8 +24,17 @@ Even if you primarily use one browser, enabling all provides flexibility to swit
 
 ## Accessibility Permissions
 
-Some browsers benefit from Accessibility access for enhanced features:
+### Why Accessibility Permissions Are Required
 
+Enabling Accessibility permissions allows SupaSidebar to operate smoothly across your system. These permissions are required for:
+
+1. **Mouse Triggers** — Enables gesture-based and mouse-driven shortcuts.  
+2. **Automated Browser Actions** — Allows SupaSidebar to perform actions in your browser without manual input.  
+3. **Live Tabs Access** — Required for real-time tab detection and management.  
+4. **Firefox & Other Non-Automation Browsers** — Necessary for browsers that rely on Accessibility instead of Automation.
+
+
+Some browsers benefit from Accessibility access for enhanced features:
 1. Go to **System Settings → Privacy & Security → Accessibility**
 2. Find **SupaSidebar** in the list
 3. Enable the checkbox
@@ -36,3 +43,5 @@ Some browsers benefit from Accessibility access for enhanced features:
 <p align="center">
   <img src="/accessibility mouse triggers.jpeg" alt="Accessibility" width="800" />
 </p>
+
+
