--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,57 +1,49 @@
-# Introduction to SupaSidebar
-Learn what SupaSidebar is and what it can do for you.
+## Introduction to SupaSidebar
+
+SupaSidebar is a lightweight macOS menubar app that gives you instant access to your links, files, folders, and browser tabs — all from one place. Designed for speed and simplicity, it reduces app-switching, keeps your workflow organized, and helps you stay focused.
+
+
+
 
 ## What is SupaSidebar?
 
-**SupaSidebar** is a menubar app designed for Mac that helps you save links, files, and folders from any browser or Finder with just a click. It offers **multi-browser support**, **global keyboard shortcuts**, and a seamless user experience, making it the perfect productivity companion for Mac users.
+SupaSidebar is your **universal launcher** for macOS.
 
-At its core, SupaSidebar acts as a universal launcher and organizational hub built specifically for macOS. Whether you're managing multiple projects, researching online, or juggling creative tools, SupaSidebar provides instant access and seamless navigation so you can stay focused on what matters most.
+Save anything with a click, switch between browsers effortlessly, and open important resources in seconds.  
+With global shortcuts, fast search, and customizable Spaces, SupaSidebar adapts to how *you* work — not the other way around.
 
-But SupaSidebar goes beyond simple file or link management. It is designed to integrate naturally into your workflow - providing quick global shortcuts, intelligent search, and customizable Spaces that adapt to how you work. Every interaction is optimized for speed, simplicity, and focus, making it an indispensable tool for anyone who values efficiency.
 
 
 ## Who is SupaSidebar For?
 
-SupaSidebar is ideal for anyone who works across multiple tools and wants a more organized, efficient, and distraction-free way to manage digital resources. From professionals to students, it adapts to diverse workflows and use cases.
+SupaSidebar is built for anyone who works across multiple tools and wants a cleaner, more efficient workspace.
 
-### Professionals and Knowledge Workers
-For professionals handling multiple files, reports, and applications daily, SupaSidebar provides a single access point for all essential resources. Quickly open recent files, pin key folders, and organize projects into dedicated Spaces - helping reduce clutter and saving valuable time spent switching contexts.
+### **Professionals**
+Organize essential files, folders, and project resources in one place. Reduce context switching and stay focused.
 
-### Designers and Developers
-Designers and developers often work with numerous assets, repositories, and documentation sources. SupaSidebar streamlines this process by letting you save design files, project directories, GitHub links, and documentation pages all in one sidebar. With quick search and keyboard shortcuts, you can move fluidly between tools without breaking your creative or coding flow.
+### **Designers & Developers**
+Store assets, repos, docs, and tools in structured Spaces. Navigate instantly with global shortcuts and intelligent search.
 
-### Students and Researchers
-Students, academics, and researchers can use SupaSidebar as a centralized hub for notes, references, and research materials. Create separate Spaces for each subject or project, organize web links and PDFs, and access them instantly when needed - allowing you to focus more on learning and less on finding files.
+### **Students & Researchers**
+Collect notes, PDFs, and links into dedicated Spaces for each subject or project. Everything stays within quick reach.
 
-### Content Creators and Freelancers
-Writers, editors, and content creators manage countless templates, media files, and creative resources. SupaSidebar keeps everything organized in one easily accessible place. Pin frequently used folders, organize ongoing projects, and streamline your entire workflow to minimize friction and maximize output.
+### **Content Creators & Freelancers**
+Keep media, drafts, templates, and client folders neatly organized. Streamline your creative workflow effortlessly.
 
-### Anyone Seeking a Unified Digital Workspace
-SupaSidebar is not just for professionals - it’s for anyone who values simplicity, speed, and structure in their daily computer use. If you frequently switch between Finder, browsers, and multiple apps, SupaSidebar helps consolidate them into one cohesive, easy-to-navigate sidebar, enhancing focus and reducing digital clutter.
+### **Anyone Wanting a Unified Workspace**
+If you constantly switch between Finder, browsers, and apps, SupaSidebar brings them all together in one clean, distraction-free sidebar.
+
+
 
 
 ## Key Benefits
 
-### Unified Access
-Access files, folders, and links from a single sidebar without opening multiple Finder windows or browser tabs.
+### **Unified Access**
+Access files, folders, links, and tabs from a single, consistent sidebar — no more juggling Finder windows or scattered bookmarks.
 
-### Smart Organization
-Organize items into customizable Spaces. Use Favorites for essential shortcuts and Recents to quickly revisit recently accessed content.
+### **Smart Spaces**
+Create dedicated Spaces for projects or workflows. Use Favorites for quick shortcuts and Recents to re-open items instantly.
 
-### Instant Search
-Find anything in seconds using a global shortcut (`CMD CTRL K`). SupaSidebar indexes your saved items so you can locate files, folders, and web links instantly.
+### **Instant Search**
+Open the global command (`CMD + CTRL + K`) to search across all your saved items and jump to anything in seconds.
 
-### Seamless Integration
-Works across major browsers including Safari, Chrome, Firefox, Arc, and Brave. Add items directly from Finder or browsers using Smart Save (`CMD CTRL S`) and Smart Copy (`CMD CTRL C`).
-
-### Lightweight and Optimized
-Designed for macOS performance, SupaSidebar runs efficiently in the background without slowing your system.
-
-
-## Supported Platforms & System Requirements
-
-- **Platform:** macOS (optimized for Apple Silicon and Intel-based Macs)  
-- **Browsers Supported:** Safari, Chrome, Firefox, Arc, Brave  
-- **Minimum macOS Version:** macOS 13 Ventura or later  
-- **Storage Requirement:** Less than 100 MB  
-- **Internet Connection:** Required for syncing and license activation (optional for offline use after setup)
