--- a/content/features/commandPanel.mdx
+++ b/content/features/commandPanel.mdx
@@ -74,20 +74,13 @@ Example: Type `tw claude code` to search Twitter for "claude code"
 
 Configure in **Preferences → Command Panel → Website Search Shortcuts**
 
+<br />
+<p align="center">
+  <img src="/public/assets/command panel settings.jpeg" alt="command panel" width="800" />
+</p>
 
 
-## Tips & Tricks
-
-### Instant Link Creation
-Found a useful page? Press **⌘⌃K** → **⌘V** to paste the URL and create a link without leaving your keyboard.
-
-### Cross-Workspace Search
-The command panel searches across *all* spaces, making it perfect for finding links when you can't remember which workspace they're in.
-
-### Recent Items as Temporary Bookmarks
-Don't clutter your saved links with one-time research. The command panel surfaces recent items automatically - save only what you'll revisit.
-
-### Live Tab Switching
+##Live Tab Switching
 Press **⌘⌃K** and search for an open tab by title. Press Return to switch to that tab instantly - faster than ⌘Tab through apps.
 
 ### Search Ranking
